# toy-dosemu2-gui

./: .gitignore  README.md  meson.build
include/: common.h  dosemu_integration.h  ui_main.h
src/: dosemu_integration.c  main.c  ui_main.c
subprojects/: cmocka.wrap  libui.wrap  subprocess.wrap
subprojects/packagefiles/subprocess/: meson.build
